# bulkuo

./: .gitmodules  CMakeLists.txt  bulkuo.sln  bulkuo.vcxproj  bulkuo.vcxproj.filters  readme.md
assets/: Resource.rc
bulkuo/: main.cpp
bulkuo.xcodeproj/: project.pbxproj
bulkuo.xcodeproj/xcshareddata/xcschemes/: bulkuo.xcscheme
bulkuo.xcodeproj/xcuserdata/charleskerr.xcuserdatad/xcschemes/: xcschememanagement.plist
examples/category/: anim.txt  itemtemp.txt  sndcat.txt
examples/label/: art.txt  hues.txt  multi.txt  sndlabel.txt
source/: CMakeLists.txt  argument.cpp  argument.hpp  catlabel.cpp  catlabel.hpp  idlist.cpp  idlist.hpp  main.cpp  types.cpp  types.hpp
source/action/: CMakeLists.txt  actions.cpp  actions.hpp  actutility.cpp  actutility.hpp  animsupport.cpp  animsupport.hpp  create.cpp  create.hpp  exist.cpp  exist.hpp  extract.cpp  extract.hpp  merge.cpp  merge.hpp  names.cpp  names.hpp  uophash.cpp  uophash.hpp
source/artwork/: CMakeLists.txt  animation.cpp  animation.hpp  art.cpp  art.hpp  gump.cpp  gump.hpp  hue.cpp  hue.hpp  light.cpp  light.hpp  texture.cpp  texture.hpp
source/uodata/: CMakeLists.txt  flag.cpp  flag.hpp  hash.cpp  hash.hpp  hueaccess.cpp  hueaccess.hpp  idx.cpp  idx.hpp  multicollection.cpp  multicollection.hpp  tileinfo.cpp  tileinfo.hpp  uop.cpp  uop.hpp  uowave.cpp  uowave.hpp
source/utility/: strutil.hpp
